--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   hive_flutter: ^1.1.0
   animations: ^2.0.11
   flutter_riverpod: ^2.6.1
+  easy_localization: ^3.0.7+1
   get_it: ^8.0.3
   
   # isar: *isar_version
@@ -51,6 +52,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
