--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   easy_localization: ^3.0.7+1
   get_it: ^8.0.3
   path_provider: ^2.0.0
-  
+  shared_preferences: ^2.5.3
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
 
